--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     <meta name="description" content="My personal book collection manager">
 
     <!-- Manifest -->
-    <link rel="manifest" href="/manifest.json">
+    <!--    <link rel="manifest" href="/manifest.json">-->
 
     <!-- Apple Touch Icons -->
     <link rel="apple-touch-icon" href="/icons/icon-152x152.png">
